--- a/DotNet/VS2015Ent/ConsoleUi/ConsoleUi.csproj
+++ b/DotNet/VS2015Ent/ConsoleUi/ConsoleUi.csproj
@@ -51,6 +51,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SDK\SDK.csproj">
+      <Project>{ed364437-6eae-4ac0-b38a-f26286fce3b7}</Project>
+      <Name>SDK</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
