--- a/DotNet/VS2015Ent/SDK/SDK.csproj
+++ b/DotNet/VS2015Ent/SDK/SDK.csproj
@@ -82,6 +82,15 @@
     <Compile Include="..\..\Source\SDK\CreatureManagement\Player.cs">
       <Link>CreatureManagement\Player.cs</Link>
     </Compile>
+    <Compile Include="..\..\Source\SDK\CreatureManagement\PlayerManager.cs">
+      <Link>CreatureManagement\PlayerManager.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Source\SDK\CreatureManagement\Profile.cs">
+      <Link>CreatureManagement\Profile.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Source\SDK\CreatureManagement\ProfileData.cs">
+      <Link>CreatureManagement\ProfileData.cs</Link>
+    </Compile>
     <Compile Include="..\..\Source\SDK\Executors\ConsoleExecutor.cs">
       <Link>Executors\ConsoleExecutor.cs</Link>
     </Compile>
@@ -145,14 +154,20 @@
     <Compile Include="..\..\Source\SDK\ItemManagement\ItemTypeData.cs">
       <Link>ItemManagement\ItemTypeData.cs</Link>
     </Compile>
+    <Compile Include="..\..\Source\SDK\RoomManagement\Area.cs">
+      <Link>RoomManagement\Area.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Source\SDK\RoomManagement\AreaData.cs">
+      <Link>RoomManagement\AreaData.cs</Link>
+    </Compile>
     <Compile Include="..\..\Source\SDK\RoomManagement\Room.cs">
       <Link>RoomManagement\Room.cs</Link>
     </Compile>
     <Compile Include="..\..\Source\SDK\RoomManagement\RoomData.cs">
       <Link>RoomManagement\RoomData.cs</Link>
     </Compile>
-    <Compile Include="..\..\Source\SDK\RoomManagement\RoomsData.cs">
-      <Link>RoomManagement\RoomsData.cs</Link>
+    <Compile Include="..\..\Source\SDK\RoomManagement\RoomManager.cs">
+      <Link>RoomManagement\RoomManager.cs</Link>
     </Compile>
     <Compile Include="..\..\Source\SDK\Serializer.cs">
       <Link>Serializer.cs</Link>
@@ -177,6 +192,12 @@
     </Compile>
     <Compile Include="..\..\Source\SDK\WorldManagement\Login\LoginWorldRuntime.cs">
       <Link>WorldManagement\Login\LoginWorldRuntime.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Source\SDK\WorldManagement\WorldManager.cs">
+      <Link>WorldManagement\WorldManager.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Source\SDK\WorldManagement\WorldTypeData.cs">
+      <Link>WorldManagement\WorldTypeData.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
