--- a/DotNet/VS2015Ent/SDK/SDK.csproj
+++ b/DotNet/VS2015Ent/SDK/SDK.csproj
@@ -52,6 +52,9 @@
     <Compile Include="..\..\Source\SDK\Constants.cs">
       <Link>Constants.cs</Link>
     </Compile>
+    <Compile Include="..\..\Source\SDK\ContentManagement\BlankContent.cs">
+      <Link>ContentManagement\BlankContent.cs</Link>
+    </Compile>
     <Compile Include="..\..\Source\SDK\ContentManagement\ColorContent.cs">
       <Link>ContentManagement\ColorContent.cs</Link>
     </Compile>
