--- a/DotNet/VS2015Ent/SDKUnitTest/SDKUnitTest.csproj
+++ b/DotNet/VS2015Ent/SDKUnitTest/SDKUnitTest.csproj
@@ -54,13 +54,20 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="..\..\Source\SDKUnitTest\Runtime\DefaultObjectFactoryUnitTest.cs">
+      <Link>Runtime\DefaultObjectFactoryUnitTest.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runtime\DefaultObjectFactoryUnitTest.cs" />
+    <Compile Include="Runtime\DefaultObjectFactoryTestRunner.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SDK\SDK.csproj">
       <Project>{ed364437-6eae-4ac0-b38a-f26286fce3b7}</Project>
       <Name>SDK</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestCommon\TestCommon.csproj">
+      <Project>{bb45e2fa-e149-4cde-b778-aef258449c93}</Project>
+      <Name>TestCommon</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
