--- a/DotNet/VS2015Ent/SDKUnitTest/SDKUnitTest.csproj
+++ b/DotNet/VS2015Ent/SDKUnitTest/SDKUnitTest.csproj
@@ -54,13 +54,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="..\..\Source\SDKUnitTest\ContentManagement\ContentUtilityUnitTest.cs">
-      <Link>ContentManagement\ContentUtilityUnitTest.cs</Link>
+    <Compile Include="..\..\Source\SDKUnitTest\ContentManagement\ContentUnitTest.cs">
+      <Link>ContentManagement\ContentUnitTest.cs</Link>
     </Compile>
     <Compile Include="..\..\Source\SDKUnitTest\Runtime\DefaultObjectFactoryUnitTest.cs">
       <Link>Runtime\DefaultObjectFactoryUnitTest.cs</Link>
     </Compile>
-    <Compile Include="ContentManagement\ContentUtilityTestRunner.cs" />
+    <Compile Include="ContentManagement\ContentTestRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\DefaultObjectFactoryTestRunner.cs" />
   </ItemGroup>
